default argument. positional vs keyword argument.

--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNT6TSkxM/AygAslUdGp75w",
+      "authorship_tag": "ABX9TyMD8cAh9tS8W1Ck0TnpGKr/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -621,6 +621,315 @@
           "execution_count": 39
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Default Argument(기본 아규먼트)\n",
+        "\n",
+        "*   함수를 선언할 때 파라미터에 설정하는 기본값.\n",
+        "    *   default parameter: 기본값이 설정된 파라미터(매개변수).\n",
+        "*   함수를 호출할 때 default parameter에 아규먼트를 주지 않으면, default argument가 기본값으로 사용됨.\n",
+        "*   함수를 호출할 때 default parameter에 아규먼트를 주면, 기본값 대신 전달한 아규먼트가 사용됨.\n"
+      ],
+      "metadata": {
+        "id": "zA_NQ71l9zOq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕', 'Hello', '파이썬', 'Python')  # sep=' ' 기본값을 사용"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Ti8XgN0-mSy",
+        "outputId": "4fafdfea-754c-4284-9db9-6a4621729607"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕 Hello 파이썬 Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7J_wWbnM_6-5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕', 'Hello', '파이썬', 'Python', sep=',')  # sep 파라미터의 기본값을 변경."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xpXU3-Y2_Rqs",
+        "outputId": "a9dcb414-922c-4ad3-e8f2-b3a0221a71bf"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕,Hello,파이썬,Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# default argument를 갖는 함수 정의\n",
+        "def repeat_message(msg, n=1):\n",
+        "    for _ in range(n):\n",
+        "        print(msg)"
+      ],
+      "metadata": {
+        "id": "9hnD4b60_icS"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "repeat_message('안녕하세요.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UP6ftaoXAbwr",
+        "outputId": "92ed1334-1282-4490-df87-738c019e7448"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "repeat_message('안녕하세요', 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZY43P3vkAzyS",
+        "outputId": "46ced180-3213-4a1f-fc4f-da397932ae0b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요\n",
+            "안녕하세요\n",
+            "안녕하세요\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**(주의)** default parameter(기본값이 있는 파라미터)는 기본값을 갖지 않는 파라미터(들) 뒤에서만 선언할 수 있음!\n",
+        "\n",
+        "default parameter를 기본값을 갖지 않는 파라미터보다 먼저 선언하면 문법 오류!"
+      ],
+      "metadata": {
+        "id": "YAzZGIXIBaKS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_success(x, y=0):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "xXshkDpgCvr6"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_failure(x=0, y):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "id": "XIbC4OorCHyj",
+        "outputId": "aebccbdd-552c-4d0a-a287-8dfd697c36df"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "parameter without a default follows parameter with a default (ipython-input-3378983790.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-3378983790.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def test_failure(x=0, y):\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m parameter without a default follows parameter with a default\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test(x, y):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "5rkoxxt8DEbz"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test(x=0, y=0):\n",
+        "    print(f'x = {x}, y = {y}')"
+      ],
+      "metadata": {
+        "id": "gqL4Q7UFDSKD"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RWOgCUpIDzgz",
+        "outputId": "fee06ff7-2e1a-4b55-e5ab-e1ecf2c51395"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 0, y = 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DJFWzsRTEKPb",
+        "outputId": "24a0f277-4206-44f4-fc16-1a915eefa0a9"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 1, y = 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(1, 2)  # positional argument 방식"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "avIwVBT7ET1r",
+        "outputId": "e7331a7e-d944-4962-e92b-d6b4a4377b51"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 1, y = 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(y=1)  # keyword argument 방식"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CVhGOy2FEwnz",
+        "outputId": "12c40226-0e35-47b9-f6e6-c43fe3ba712d"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 0, y = 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "함수를 호출할 때 아규먼트를 전달하는 방법:\n",
+        "\n",
+        "*   **positional argument**: 선언된 파라미터 순서대로 아규먼트들을 전달하는 방식.\n",
+        "*   **keyword argument**: `param=value` 형식으로 아규먼트(들)을 전달하는 방식.\n",
+        "    *   keyword argument 방식은 파라미터 순서를 지키지 않아도 됨.\n",
+        "    *   **(주의)** 함수를 호출할 때 positional argument와 keyword argument를 함께 사용하는 경우에는, 반드시 positional argument들을 먼저 써야 함.\n",
+        "    *   keyword argument를 positional argument보다 먼저 쓸 수는 없음!\n"
+      ],
+      "metadata": {
+        "id": "ab3VVafMFdtM"
+      }
     }
   ]
 }
