positional vs keyword argument. variable-length argument.

--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMD8cAh9tS8W1Ck0TnpGKr/",
+      "authorship_tag": "ABX9TyOzVN0Q8sPv3IL7hHAlG7zE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -930,6 +930,205 @@
       "metadata": {
         "id": "ab3VVafMFdtM"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(y=1, x=123)  # keyword argument는 파라미터 순서를 지키지 않아도 됨."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1jn5aZVyLsh9",
+        "outputId": "0919a594-4f1b-4dae-844b-2ce5c94f4dc6"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 123, y = 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(1, y=123)  # positional 먼저 -> keyword 나중에"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0g8DOtYHMHnV",
+        "outputId": "033405c6-2cb5-4c10-ced1-4a46f655b78c"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 1, y = 123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(x=1, 123)  # keyword 먼저, positional 나중에 --> 문법 오류"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "id": "ZajBmfW6McH1",
+        "outputId": "2006cec9-50ae-41fa-dce1-6bd9e9f25255"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "positional argument follows keyword argument (ipython-input-3109326045.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-3109326045.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    test(x=1, 123)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(x=1, y=12)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "74vaMArHMeol",
+        "outputId": "3cbc2e20-d292-4d8b-c987-5a580db41338"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 1, y = 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 가변길이 인수(variable-length arguments)\n",
+        "\n",
+        "*   함수를 호출할 때 아규먼트를 몇 개를 전달해도 됨.\n",
+        "    *   아규먼트를 한 개도 전달하지 않아도 됨.\n",
+        "*   함수를 선언할 때 파라미터 이름 앞에 `*`를 사용한 파라미터가 가변길이 인수가 됨.\n",
+        "*   함수 내부에서 가변길이 인수는 튜플(tuple)로 취급함.\n",
+        "    *   가변길이 인수는 인덱스를 가짐.\n",
+        "    *   가변길이 인수는 `for-in` 구문에서 사용할 수 있음.\n",
+        "*   함수를 선언할 때 가변길이 인수는 1개만 선언할 수 있음.\n",
+        "*   가변길이 인수는 keyword argument 방식으로 아규먼트들을 전달할 수 없음.\n",
+        "*   가변길이 인수 뒤에서 선언된 파라미터(들)은 keyword argument 방식으로만 아규먼트를 전달할 수 있음.\n"
+      ],
+      "metadata": {
+        "id": "lEwL8b8SNZUm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print()  # arg 0개\n",
+        "print('hello')  # arg 1개\n",
+        "print('hello', '안녕')  # arg 2개"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-aK1YGG8Nufl",
+        "outputId": "a23ca0a8-f463-41bb-8f8c-00bccef89dcf"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "hello\n",
+            "hello 안녕\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('qwer', 'hello', sep='::')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z8MGUF5XN1Eu",
+        "outputId": "7140cee9-ef34-4dbc-fb08-d7658c79506a"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "qwer::hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 가변길이 인수를 2개 이상 선언하면 문법 오류\n",
+        "def fn(*a, *b):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "id": "QWpyDMokS-hW",
+        "outputId": "abb4daf8-e409-43e1-86a7-5f30fb232165"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "* argument may appear only once (ipython-input-2721522420.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-2721522420.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def fn(*a, *b):\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m * argument may appear only once\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dbiCXsK5TTKY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
