가변길이 인수

--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOzVN0Q8sPv3IL7hHAlG7zE",
+      "authorship_tag": "ABX9TyMX3kRvqBCRY1jFLrt6beTy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1123,9 +1123,287 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def add_all(*args):\n",
+        "    print(args)\n",
+        "    result = 0\n",
+        "    for x in args:\n",
+        "        result += x\n",
+        "\n",
+        "    return result"
+      ],
       "metadata": {
         "id": "dbiCXsK5TTKY"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add_all()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xHD_KTzDX_mK",
+        "outputId": "c6a6c2a0-d775-4bf5-fdaa-8e95f2661ccb"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "()\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add_all(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GWYoKdF4YAk_",
+        "outputId": "98bfe545-87db-41af-c1f2-44863be7aca7"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1,)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add_all(1, 2, 3, 4, 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0LiB1wlpYFbp",
+        "outputId": "e071ab22-c487-4938-9eb2-fb663f32d2ce"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3, 4, 5)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_var_args(x, *y):\n",
+        "    print(f'x={x}, y={y}')"
+      ],
+      "metadata": {
+        "id": "ch7sK3eFYH4Y"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_var_args(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IQ4M1CG8c9cB",
+        "outputId": "137cd469-d294-4e2a-d443-7da53893cffd"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x=1, y=()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_var_args(1, 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FVvuc7QCap5I",
+        "outputId": "fa5bddf1-61b2-4477-e21b-663811ccf56c"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x=1, y=(2,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_var_args(1, 2, 3, 4, 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZjnNeuxGbExQ",
+        "outputId": "d2f5c08e-fa1b-4537-938a-67923cb2ce52"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x=1, y=(2, 3, 4, 5)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_var_args2(*x, y):\n",
+        "    print(f'x={x}, y={y}')"
+      ],
+      "metadata": {
+        "id": "92bueUUndY_4"
+      },
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_var_args2(1, 2, y=3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XQ81L9mvdi8A",
+        "outputId": "de0352fe-f908-4a49-9d3b-e472760af93e"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x=(1, 2), y=3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fn(a, b, *, x, y, z):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "oZ0a5gOpdsyQ"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fn(1, 2, x=3, y=4, z=5)"
+      ],
+      "metadata": {
+        "id": "0-MrRck6e1Mp"
+      },
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fn(a=1, b=2, x=1, y=2, z=3)"
+      ],
+      "metadata": {
+        "id": "g3u0a9OzfmuR"
+      },
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate(*values, op):\n",
+        "    \"\"\"\n",
+        "    op='+'인 경우, values들의 합계를 리턴.\n",
+        "    op='*'인 경우, values들의 곱을 리턴.\n",
+        "    (예)\n",
+        "    calculate(1, 2, 3, op='+') 호출하면 1 + 2 + 3을 리턴.\n",
+        "    calculate(1, 2, 3, op='*') 호출하면 1 * 2 * 3을 리턴.\n",
+        "    values에 전달된 값이 없을 때는 None을 리턴.\n",
+        "    op가 '+' 또는 '*'가 아닐 때는 ValueError를 발생(raise ValueError).\n",
+        "    \"\"\"\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "QVUmKk2fgFbp"
       },
       "execution_count": null,
       "outputs": []
