variable-length keyword arguments

--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOECyp7eOVt4renedh9HWS8",
+      "authorship_tag": "ABX9TyNMZs++Vd2FBbrKZL545nSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1626,12 +1626,222 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def test_kwargs2(**kwargs, *args):\n",
+        "    pass"
+      ],
       "metadata": {
-        "id": "8kF1znqJJbOX"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "id": "8kF1znqJJbOX",
+        "outputId": "ce40f84c-d1ee-4f48-b413-c58a60ad9cf7"
       },
-      "execution_count": null,
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "arguments cannot follow var-keyword argument (ipython-input-3826954459.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-3826954459.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def test_kwargs2(**kwargs, *arg):\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m arguments cannot follow var-keyword argument\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_student_info(id, name, **kwargs):\n",
+        "    student = {'id': id, 'name': name}\n",
+        "    print(f'kwargs = {kwargs}')\n",
+        "    for k, v in kwargs.items():\n",
+        "        student[k] = v\n",
+        "\n",
+        "    return student"
+      ],
+      "metadata": {
+        "id": "8sfnsBVoOopA"
+      },
+      "execution_count": 70,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "make_student_info(1, '홍길동')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wUZTr3qqQ5lC",
+        "outputId": "4e6f4ed8-fe44-4b2e-917d-7ad79a09f559"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kwargs = {}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'id': 1, 'name': '홍길동'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "make_student_info(2, '오쌤', email='jake@itwill.com', phone='010-0000-0000')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lp2He86vRuYA",
+        "outputId": "88349db0-373d-43a3-dae7-b8cb7ddf1fc7"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kwargs = {'email': 'jake@itwill.com', 'phone': '010-0000-0000'}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'id': 2, 'name': '오쌤', 'email': 'jake@itwill.com', 'phone': '010-0000-0000'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "make_student_info(3, 'Scott', job='Manager')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fcqbNwTBSB-J",
+        "outputId": "0ddfcbf0-ff8f-492d-de9c-be2a598c91fd"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kwargs = {'job': 'Manager'}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'id': 3, 'name': 'Scott', 'job': 'Manager'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_student_info2(id, name, **kwargs):\n",
+        "    student = {'id': id, 'name': name}\n",
+        "    for k, v in kwargs.items():\n",
+        "        if k in ('email', 'grade'):\n",
+        "            student[k] = v\n",
+        "\n",
+        "    return student"
+      ],
+      "metadata": {
+        "id": "rr4R47a9SywY"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "make_student_info2(id=100,\n",
+        "                   name='오쌤',\n",
+        "                   email='jake@itwill.com',\n",
+        "                   phone='010-0000-0000',\n",
+        "                   grade=3,\n",
+        "                   job='teacher')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "88aDlflFT4tZ",
+        "outputId": "ccac85c3-70fe-4289-d1c4-c8d1cb045fdc"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'id': 100, 'name': '오쌤', 'email': 'jake@itwill.com', 'grade': 3}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "make_student_info2(id=1234,\n",
+        "                   name='king',\n",
+        "                   grade=1,\n",
+        "                   job='president')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WFlnKBA6Uhax",
+        "outputId": "3dceafa5-7e50-44ae-c871-9c1ed1932798"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'id': 1234, 'name': 'king', 'grade': 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
     }
   ]
 }
