local function. lambda.

--- a/lab_python/python12_lambda.ipynb
+++ b/lab_python/python12_lambda.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmy0Z1m/hQbuTiKMY40obh",
+      "authorship_tag": "ABX9TyPjDkOMbV/ZBDhJdn2xNv8l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,6 +354,316 @@
           },
           "metadata": {},
           "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 내부 함수, 함수를 리턴하는 함수\n",
+        "\n",
+        "내부 함수(inner function), 지역 함수(local function):\n",
+        "*   함수 내부에서 선언된 함수.\n",
+        "*   선언된 함수(외부 함수) 안에서만 호출할 수 있음.\n",
+        "*   선언된 함수 바깥에서는 호출할 수 없음.\n",
+        "*   외부 함수의 지역 변수들(파라미터 포함)을 사용할 수 있음.\n"
+      ],
+      "metadata": {
+        "id": "JP63S9Y63e93"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_incrementor(n):\n",
+        "    # 내부 함수 선언\n",
+        "    def add_n(x):\n",
+        "        return x + n\n",
+        "\n",
+        "    # 함수 객체를 리턴.\n",
+        "    return add_n"
+      ],
+      "metadata": {
+        "id": "FKz90O-s4Ufw"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add_n(100)  #> 내부(지역) 함수는 단독으로 사용할 수 없음."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "id": "bwrFm5uX4x3B",
+        "outputId": "4dc8a1ea-b07b-4d6c-ac2e-32c645003b4c"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'add_n' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-33525383.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0madd_n\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'add_n' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plus_2 = make_incrementor(2)\n",
+        "print(plus_2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nGRRkWdE48dR",
+        "outputId": "1ce8b193-15e5-4c1e-9564-dd98cca8e037"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<function make_incrementor.<locals>.add_n at 0x7bca0ba2dda0>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plus_2(100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Zr_xzMS6NQB",
+        "outputId": "887cdae5-6dca-4b06-ad4f-d6d51230c7ba"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "102"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plus_10 = make_incrementor(10)\n",
+        "plus_10(100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-c_aLTBh6swh",
+        "outputId": "5d5629e9-4bb8-4f66-bb61-57a4b6cb6844"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "110"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "make_incrementor(3)(100)"
+      ],
+      "metadata": {
+        "id": "KL_3Ge2q60D5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 람다 표현식(Lambda Exression)\n",
+        "\n",
+        "```\n",
+        "lambda param1, param2, ...: expression(식)\n",
+        "```\n",
+        "\n",
+        "\n",
+        "*   이름이 없는 함수\n",
+        "*   함수 이름 선언 없이, 파라미터 선언과 반환값 또는 반환식으로 함수를 정의하는 것.\n",
+        "*   람다 표현식은 변수에 할당할 수 있고, **함수의 아규먼트로 전달**할 수 있음.\n"
+      ],
+      "metadata": {
+        "id": "2IUAW3hF981I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 함수 선언\n",
+        "# def plus_one(x):\n",
+        "#     return x + 1\n",
+        "\n",
+        "# lambda 표현식\n",
+        "plus_one = lambda x: x + 1\n",
+        "print(plus_one)\n",
+        "plus_one(100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P4F7_y53-_tA",
+        "outputId": "5124434c-4311-4770-eec2-20456e4ec2e2"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<function <lambda> at 0x7bca0bded120>\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "101"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculator(1, 2, lambda x, y: x - y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "75yC6h4TASPy",
+        "outputId": "9eec85ef-8929-4700-85ac-44219fa6d604"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculator(1, 2, lambda x, y: x * y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B0HQUXkhA3Qz",
+        "outputId": "2a783c9d-9229-47b5-d21f-e8b941c68e92"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculator(1, 2, lambda x, y: x / y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u5zLZItdBL-b",
+        "outputId": "285adf2d-cfd7-4934-958d-4c2085fe66d2"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculator(1, 2, lambda x, y: x > y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8FADCZ0aBSE5",
+        "outputId": "92cd6647-991c-46c0-968a-6fb257ca5429"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
